Fixed i18n(Internationalization). closes #1

--- a/pet-clinic/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic/pet-clinic-web/src/main/resources/application.properties
@@ -3,3 +3,6 @@ guru.owner2.surname=Novakovic
 
 #guru.owner3.name=YAML
 #guru.owner3.surname=AINT MARKUP
+
+#Internationalization for Welcome message
+spring.messages.basename=messages/messages
