--- a/pet-clinic/pet-clinic-data/pom.xml
+++ b/pet-clinic/pet-clinic-data/pom.xml
@@ -8,6 +8,13 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>pet-clinic-data</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>pet-clinic-data</artifactId>
