Added Profile Confuguration. closes #37

--- a/pet-clinic/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic/pet-clinic-web/src/main/resources/application.properties
@@ -6,3 +6,5 @@ guru.owner2.surname=Novakovic
 
 #Internationalization for Welcome message
 spring.messages.basename=messages/messages
+
+#spring.profiles.active=springdatajpa
