--- a/pet-clinic/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic/pet-clinic-web/src/main/resources/application.properties
@@ -7,4 +7,4 @@ guru.owner2.surname=Novakovic
 #Internationalization for Welcome message
 spring.messages.basename=messages/messages
 
-#spring.profiles.active=springdatajpa
+spring.profiles.active=springdatajpa
